--- a/frontend/index.html
+++ b/frontend/index.html
@@ -84,7 +84,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=DotGothic16&display=swap" rel="stylesheet"> 
-    <script src="./src/dist/socket.io.js"></script>
+    <script src="./src/dist/socket.io.min.js"></script>
   </head>
   <body>
     <div id="wrapper-container">
@@ -99,7 +99,7 @@
         BAG
       </div>
     </div>
-    <canvas _onclick="updateMenuStatus()" id="canvas" width="495px" height="495px"></canvas>
+    <canvas onclick="updateMenuStatus()" id="canvas" width="495px" height="495px"></canvas>
     </div>
     <script src="src/js/PlayerControls.js"></script>
     <script src="src/js/ResourcesLoader.js"></script>
